--- a/css_smiley.css
+++ b/css_smiley.css
@@ -5,33 +5,33 @@
 .face {
     width: 75px;
     height: 75px;
+    border-style: solid;
     border: solid 2px black;
     background-color: yellow;
+    border-color: white;
     border-radius: 50px;
 }
 
 .left-eye {
+    position: relative;
     width: 15px;
     height: 15px;
+    top: 20px;
+    left:16px;
     border: solid 1px black;
     border-radius: 10px;
-    z-index: 10px;
-    position: relative;
-    left: 13px;
-    top: 20px;
-    background-color: white;
+    background-color:white;
 
 }
 
 .right-eye {
+    position: relative;
     width: 15px;
     height: 15px;
+    top: 1px;
+    left: 38px;
     border: solid 1px black;
     border-radius: 10px;
-    z-index: 10px;
-    position: relative;
-    left: 39px;
-    top: -2px;
     background-color: white;
 }
 
@@ -39,7 +39,7 @@
     width: 30px;
     height: 10px;
     border: solid 1px black;
-    border-radius: 5px 5px 45px 45px;
+    border-radius: 50% 49% 65% 65% / 11% 10% 115% 115%;
     margin: 16px;
     position: relative;
     top: -4px;
@@ -61,19 +61,20 @@
 
 .eyebrow-left {
     width: 13px;
-    height: 1px;
-    border: solid 2px black;
+    border: solid 1px black;
     position: relative;
-    top: 10px;
-    left: 18px;
+    top: 12px;
+    left: 16px;
     background-color: black;
+    transform: rotate(155deg);
 }
 
 .eyebrow-right {
     width: 13px;
-    height: 1px;
-    border: solid 2px black;
+    border: solid 1px black;
     position: relative;
-    top: -11px;
-    left: 42px;
+    top: -7px;
+    left: 41px;
     background-color: black;
+    transform: rotate(205deg);
+}
